core/tests/integration/typecheck/fail/mismatch_rec_record_field.ncl
# test.type = 'error'
# eval = 'typecheck'
# 
# [test.metadata]
# error = 'TypecheckError::TypeMismatch'
#
# [test.metadata.expectation]
# expected = 'Number'
# inferred = 'Bool'
{ a : Number = true, b = a + 1 } : { a : Number, b : Number }
